testsuite/tests/semantic_errors/partially_matching_overloads/test.out
Analyzing test.adb
##################

Resolving xrefs for node <AssignStmt test.adb:7:4-7:17>
*******************************************************

test.adb:7:9: error: no matching alternative (of 2 candidates)
7 |    X := Foo (2);
  |         ^^^

test.adb:5:22: info: expected Boolean, got universal integer
5 |    function Foo (X : Boolean) return Integer is (0);
  |                      ^^^^^^^

test.adb:4:38: info: expected Integer, got Boolean
4 |    function Foo (X : Integer) return Boolean is (True);
  |                                      ^^^^^^^



Done.
